feat(tbar):changed toolbar logos

--- a/src/_i18n/languages/en.json
+++ b/src/_i18n/languages/en.json
@@ -37,5 +37,9 @@
     "resetLinkSent": "Reset link sent",
     "ifAccountExists": "If an account exists, a password reset link has been sent.",
     "sendResetLink": "Send reset link"
+  },
+
+  "tab2":{
+    "chooseExercise":"Choose your exercise"
   }
 }
