feat(Bug): fixed a lot of bugs on editprofile and exercises. Edge function but with cors fail

--- a/src/_i18n/languages/en.json
+++ b/src/_i18n/languages/en.json
@@ -81,8 +81,12 @@
 
   "stopWatch":{
     "stopWatch": "Stopwatch"
+  },
 
+  "photo":{
+    "takePhoto": "Take your progress picture"
   }
+
   
 
 }
